# ashuk

./: Cargo.toml  README.md  package.json
.github/: release.yml
.github/workflows/: create-asset.yml
.husky/: pre-commit
app/: deno.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.css  App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: app.rs  logger.rs  main.rs
app/src/components/App/: index.tsx
app/src/components/FixedArea/: index.tsx  style.css
app/src/components/InputFile/: index.tsx  style.css
app/src/components/TooltipSlider/: index.tsx  style.css
app/src/hooks/: useIPC.ts  useIPCQuery.ts  useInternalProcess.ts  useOpen.ts  useOpenDialogQuery.ts
app/src/libs/error/: ProcessConnectionError.ts  SerializedErrorObject.d.ts  baseError.ts
app/src/libs/util/: formatBytes.ts
app/src/types/: util.d.ts
core/: Cargo.toml
core/src/: compresser.rs  converter.rs  format_meta.rs  lib.rs
src/: main.rs
