[package]
name = "ashuk"
version = "0.1.0"
authors = ["Hajime-san <utd.c.r.d.s.a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
image = "0.24.2"
webp = "0.2"
thiserror= "1"
