[package]
name = "ashuk-core"
version = "0.1.0"
authors = ["Hajime-san <utd.c.r.d.s.a@gmail.com>"]
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
image = "0.24.2"
webp = "0.2"
oxipng = "5.0.1"
mozjpeg = "0.9.3"
thiserror= "1"
